infra/k8s/prod/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: prometheus
    env: prod
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
