infra/k8s/prod/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-prod
  namespace: monitoring
  labels:
    app: prometheus
    env: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: sleeman01.fursa.click
      http:
        paths:
          - path: /prod/prometheus(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090
